<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/algo_background"
    android:layout_above="@id/bottom_navigation"
    >

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="true"
        tools:context=".AboutActivity"
        tools:openDrawer="start"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:elevation="4dp"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar"
                android:layout_above="@id/bottom_navigation">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algo_head_1"
                    android:id="@+id/algo_heading"
                    android:textColor="#F44336"
                    android:layout_centerHorizontal="true"
                    android:textSize="26sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Note :"
                    android:textStyle="bold"
                    android:id="@+id/note"
                    android:layout_below="@id/algo_heading"
                    android:layout_marginTop="20dp"
                    android:textColor="#000000"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text1"
                    android:text="@string/algo1"
                    android:layout_below="@id/algo_heading"
                    android:layout_toRightOf="@id/note"
                    android:layout_marginTop="20dp"
                    android:textColor="#000000"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algo_link_1"
                    android:id="@+id/algo_link_1"
                    android:layout_below="@id/text1"
                    android:layout_toRightOf="@id/note"
                    android:autoLink="all"
                    android:clickable="true"
                    />

                    <ImageView
                        android:id="@+id/algo_fig1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text1"
                        android:src="@drawable/algo1"
                        />

                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algo_fig1_description"
                    android:layout_below="@id/algo_fig1"
                    android:id="@+id/fig1_text"
                        android:textColor="#000000"
                        />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/algo2"
                    android:layout_below="@id/fig1_text"
                    android:id="@+id/algo_fig2"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algo_fig2_description"
                    android:layout_below="@+id/algo_fig2"
                    android:id="@+id/fig2_text"
                    android:textColor="#000000"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/algo3"
                    android:layout_below="@id/fig2_text"
                    android:id="@+id/algo_fig3"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algo_fig3_description"
                    android:layout_below="@id/algo_fig3"
                    android:id="@+id/fig3_text"
                    android:textColor="#000000"
                    />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/algo_between"
                        android:layout_marginTop="30dp"
                        android:id="@+id/algo_page_break"
                        android:layout_below="@id/fig3_text"/>

                <TextView
                    android:id="@+id/model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/algo_page_break"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/algo_head_2"
                    android:textColor="@color/colorAccent"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/algo4"
                    android:layout_below="@id/model"
                    android:id="@+id/algo_fig4"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algo_fig4_description"
                    android:layout_below="@id/algo_fig4"
                    android:id="@+id/fig4_text"
                    android:textColor="#000000"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/algo5a"
                    android:layout_below="@id/fig4_text"
                    android:id="@+id/algo_fig5a"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Model I"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:layout_below="@id/algo_fig5a"
                    android:id="@+id/fig5a_text"
                    android:textColor="#000000"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/algo5b"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/fig5a_text"
                    android:id="@+id/algo_fig5b"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Model II"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:layout_below="@id/algo_fig5b"
                    android:id="@+id/fig5b_text"
                    android:textColor="#000000"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/algo5c"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/fig5b_text"
                    android:id="@+id/algo_fig5c"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Model III"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:layout_below="@id/algo_fig5c"
                    android:id="@+id/fig5c_text"
                    android:textColor="#000000"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/algo6"
                    android:layout_below="@id/fig5c_text"
                    android:id="@+id/algo_fig6"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Standard Images"
                    android:layout_below="@id/algo_fig6"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:id="@+id/fig6_text"
                    android:textColor="#000000"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/algo7"
                    android:layout_below="@id/fig6_text"
                    android:id="@+id/algo_fig7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Augmented Images"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:layout_below="@id/algo_fig7"
                    android:id="@+id/fig7_text"
                    android:textColor="#000000"
                    />

                </RelativeLayout>


            </FrameLayout>

            </ScrollView>


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#FFFFFF"
                app:menu="@menu/bottom_navigation"
                app:itemTextColor="@drawable/selector"
                app:itemIconTint="@drawable/selector"
                app:itemBackground="@color/colorPrimary"
                />

        </RelativeLayout>


        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/nav_drawer_header"
            app:menu="@menu/drawer_menu"/>

    </androidx.drawerlayout.widget.DrawerLayout>






</RelativeLayout>